--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@
   padding: 12px;
 }
 
-.hero {
+.hero,
+.info,
+.quote,
+.sign-up-call {
   width: 65%;
   margin: auto;
 }
@@ -16,7 +19,7 @@
 }
 
 .nav-bar img {
-  max-width:  80px;
+  max-width: 80px;
 }
 
 .nav-bar ul {
@@ -25,7 +28,7 @@
   gap: 10px;
 }
 
-.intro img{
+.intro img {
   width: 40%;
   min-width: 300px;
   margin: 32px;
@@ -48,6 +51,37 @@
   font-weight: bold;
 }
 
+.info {
+  padding: 32px;
+  text-align: center;
+}
+
+.info h2 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #1f2937;
+}
+
+.card-collection {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding: 16px;
+}
+
+.card img {
+  border: 3px solid #3882f6;
+  border-radius: 15px;
+  padding: 8px;
+  width: 200px;
+  height: 180px;
+}
+
+.card p {
+  color: #a8aaad;
+}
+
+
 a {
   text-decoration: none;
   color: #e5e7eb;
@@ -57,6 +91,7 @@ p {
   color: #e5e7eb;
 }
 
-h, p{
+h,
+p {
   font-family: 'Roboto', sans-serif;
 }
