--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,14 @@
   border: 2px solid white;
 }
 
+.footer {
+  background-color: #1f2937;
+  color: white;
+  height: 80px;
+  text-align: center;
+  line-height: 80px;
+}
+
 a {
   text-decoration: none;
   color: #e5e7eb;
